# pathmind

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_etl_identity_privacy.py
apps/api/src/pathmind_api/: cache.py  config.py  database.py  deps.py  main.py  models.py  privacy.py  repositories.py  routes.py  routes_v1_phase3.py  schemas.py  scoring.py  service.py
apps/api/src/pathmind_api/clients/: __init__.py  aopwiki.py  base.py  chembl.py  gtex.py  hpa.py  opentargets.py  pubchem.py  reactome.py  uniprot.py
apps/api/src/pathmind_api/etl/: __init__.py  __main__.py  runner.py
apps/api/src/pathmind_api/services/: auto_seed.py  dili_data.py  drug_response_phase4.py  patient_expression_phase4.py  pgx_phase4.py  pharmcat_runner_phase4.py  tissue_expression_phase3.py  tissue_impact_phase3.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_api_endpoints.py
apps/api/tests/unit/: test_phase3_services.py  test_phase4_services.py  test_privacy.py  test_scoring.py
apps/web/: package.json  playwright.config.ts  (+2 more)
docs/: adr-001-mvp-decisions.md  attribution.md  competitive-landscape.md  legal-attribution-verification.md  next-phase-principles.md  phase-2a-novel-compounds-topology-dose.md  phase-2b-gene-expression-transcriptomics.md  phase-3-toxicity-tissue-effects.md  phase-4-digital-twin-personalization.md  prd-closeout-checklist.md  runbook.md
(+21 files in other folders)
